--- a/css/navAndFooter.css
+++ b/css/navAndFooter.css
@@ -33,10 +33,10 @@ body {
   
 img{
     grid-template-columns: auto auto auto;
-    margin-left: 50px;
-    margin-left:50px ;
+    margin-left: 100px;
+    margin-left:100px ;
     margin-top: 80px;
-    max-width: 300px;
+    max-width: 380px;
     height: auto;
     border-radius: 20px;
 }
@@ -79,6 +79,11 @@ img{
     .topnav a.icon {
       float: left;
       display: block;
+    }
+    img{
+      margin-left: 50px;
+      margin-right: 50px;
+      max-width: 300px;
     }
   }
   
